# RugbyTracker

./: .gitignore  README.md  pyproject.toml
data/: rugbytracker.db
data/imports/: competitions.csv  matches.csv  teams.csv
data/imports/M6N-2026/: competitions.csv  countries.csv  matches.csv  referees.csv  teams.csv  venues.csv
data/imports/NATIONS-2026/: competitions.csv  countries.csv  matches.csv  referees.csv  teams.csv  venues.csv
data/templates/: competitions.csv  countries.csv  matches.csv  referees.csv  teams.csv  venues.csv
docker/: Dockerfile  docker-compose.yml
docs/: Release Notes.md
docs/Project Briefs/: Project Brief - Rugby Tracker.md
migrations/: 001_initial_schema.py  002_competition_ruleset.py  003_optional_match_venue.py  004_team_country.py  005_countries.py  006_country_references.py  007_database_rulesets.py  008_country_hemisphere.py  009_competition_hemisphere_aware.py
reports/: Competition Summary Report.ipynb  Head-to-Head Report.ipynb  Team Form Report.ipynb  Team Summary Report.ipynb  pyproject.toml
reports/scripts/: make-venv.sh
scripts/: export.sh  import.sh  run-dev-tracker.sh  run-tests.sh  run-tracker.sh
src/: streamlit_app.py
src/rugby_tracker/: __init__.py  analysis.py  app.py  cli.py  config.py  database.py  export_cli.py  exports.py  import_cli.py  imports.py  repositories.py  services.py  standings.py
tests/: conftest.py  test_analysis.py  test_app.py  test_cli.py  test_database.py  test_export_cli.py  test_exports.py  test_import_cli.py  test_imports.py  test_services.py  test_standings.py
(+44 files in other folders)
