[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rugby-union-tracker"
version = "1.8.0"
description = "Rugby Union Competition Tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas>=2.2.3",
  "pytest",
  "reportlab>=4.2",
  "streamlit>=1.58",
  "yoyo-migrations>=9.0",
]

[project.scripts]
rugby-tracker = "rugby_tracker.cli:main"
rugby-import = "rugby_tracker.import_cli:main"
rugby-export = "rugby_tracker.export_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
